# tools.simpleweb3.chbackend

./: .env  Cargo.toml  data.json
src/: config.rs  errors.rs  main.rs  state.rs  telemetry.rs
src/http/: mod.rs
src/http/routes/: data.rs  mod.rs
src/models/: item.rs
src/services/: fs_store.rs  mod.rs
